tenants/kropy/prod/kropy-web-page/frontend/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kropy-web-page-svc
  namespace: kropy-prod
spec:
  selector:
    app: kropy-web-page
  ports:
    - port: 80
      targetPort: 80
