tenants/kropy/prod/kropy-web-page/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kropy-web-page-ingress
  namespace: kropy-prod
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - kropy.ikedadev.com
    secretName: kropy-ikedadev-com-tls 
  rules:
  - host: kropy.ikedadev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kropy-web-page-svc
            port:
              number: 80
